# potator_salad

./: .env  pyproject.toml
alembic/: env.py
erer_dashboard/: main.py
erer_dashboard/api/: lote.py
erer_dashboard/infra/: base_model.py
erer_dashboard/models/: lote.py
